# 3D-STL-model-editor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.yml  quick-start.txt  todo.txt
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
backend/src/: lib.rs  main.rs
backend/src/application/operation_performer/: bool_op_performer.rs  mod.rs
backend/src/application/stl_reader/: mod.rs
backend/src/configuration/: cors_config.rs  mod.rs
backend/src/domain/model/: point.rs  triangle.rs
backend/src/port/adapter/: mod.rs
backend/src/port/adapter/command/: extract_mesh_command.rs  perform_on_mesh_command.rs
backend/src/port/adapter/model/: mesh_arrayable_model.rs  mesh_model.rs  mod.rs  stl_filepath_model.rs
backend/src/port/adapter/resource/: mod.rs  stl_resource.rs
backend/src/resource/: mesh_resource.rs  stl_resource.rs
middleware/: Dockerfile  README.md  main.go  middleware.go  middleware.sh  proxy.go  proxy_message.go  proxy_transport.go
nginx/: Dockerfile  README.md  cert.crt  cert.key  nginx.conf  nginx.html
nginx/cert/: cert.crt  cert.key
samples/binary/: cube_in_origin.stl  jaw_top.stl  long_scaled_shifted_cube.stl  membrum_inferius__femur__dexter.stl  union_res.stl
src/: lib.rs  main.rs
src/application/: ascii_stl_reader.rs  binary_stl_reader.rs  mod.rs
src/configuration/: cors_config.rs
src/resource/: mesh_resource.rs  stl_resource.rs
webclient/: frequent-problems.txt  index.html
webclient/css/: main.css  style.css  style.scss
webclient/js/: main.js  (+2 more)
(+79 files in other folders)
