[package]
name = "geometry_server"
version = "0.1.0"
authors = ["anthony"]

[dependencies]
base64 = "0.6.0"
byteorder = "1"
geometry_kernel = { git = "https://github.com/AsadiR/geometry_kernel" }
regex = "0.2"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = "0.3.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stl = "0.2.0"
